feat: Testes ItemServiceTest